# Video-Compressor

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/algorithms/: base_algorithm.hpp  bilinear_downsample_algorithm.hpp  cv_downsample_algorithm.hpp  downsample_algorithm.hpp
include/core/: decoder.hpp  encoder.hpp
include/utils/: audio.hpp  compressed_format.hpp  file_reader.hpp  file_writer.hpp
log/: 646.ipynb  downsample.analysis.txt
src/: main.cpp  pipeline.cpp
src/algorithms/: base_algorithm.cpp  bilinear_downsample_algorithm.cpp  cuda_bilinear_downsample_algorithm.cu  cv_downsample_algorithm.cpp  downsample_algorithm.cpp
src/core/: decoder.cpp  encoder.cpp
src/utils/: audio.cpp  file_reader.cpp  file_writer.cpp
tests/: CMakeLists.txt  pipeline.cpp  test.cpp  test.hpp
